--- a/views/public/Register.ejs
+++ b/views/public/Register.ejs
@@ -5,7 +5,7 @@
     <title>login</title>
 </head>
 <body>
-   <h1>Admin login page</h1> 
+   <h1>Register Admin Page</h1> 
    <form action="/registerUser" method="post">
        <label for="organisation">Organisation:</label> 
        <input type="text" id="organisation" name="organisation" required />
